--- a/trunk/eea.sitestructurediff/trunk/docs/HISTORY.txt
+++ b/trunk/eea.sitestructurediff/trunk/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 4.6-dev - (unreleased)
 ----------------------
+* Bug fix: fixed tests
+  [ghicaale refs #21453]
 
 4.5 - (2013-05-20)
 ------------------
