--- a/trunk/eea.sitestructurediff/trunk/docs/HISTORY.txt
+++ b/trunk/eea.sitestructurediff/trunk/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+4.7-dev - (unreleased)
+----------------------
+
 4.6 - (2014-11-20)
 ------------------
 * Bug fix: fixed tests
