--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,12 +3,14 @@ Changelog
 
 4.8.dev0 - (unreleased)
 -----------------------
+* Bug fix: Added missing dependency to valentine.linguaflow
+  [avoinea]
 
 4.7 - (2015-03-17)
 ------------------
 * Change: Switched to curl in the jenkins build install script
   [olimpiurob refs #22402]
-* Change: Changed fetch url for jenkins build install script to the install 
+* Change: Changed fetch url for jenkins build install script to the install
   script from the main EEA CPB repository
   [olimpiurob refs #22402]
 
