--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+5.0.dev0 - (unreleased)
+-----------------------
+
 4.9 - (2016-05-19)
 ------------------
 * Bug fix: Fix pylint warnings
