--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 5.0.dev0 - (unreleased)
 -----------------------
+* Change: updated package information
+[eduard-fironda]
 
 4.9 - (2016-05-19)
 ------------------
